# claude-usage-widget

./: .gitignore  CHANGELOG.md  FAULT_TOLERANCE.md  MANIFEST.in  README.md  config.json.example  install-macos.sh  install.sh  main.py  pyproject.toml
.github/workflows/: publish.yml
Formula/: claude-usage-widget.rb
claude_usage/: __init__.py  __main__.py  ai_report.py  analytics.py  api_server.py  budget.py  burn.py  cache_analyzer.py  cli.py  codex.py  collector.py  config.py  exporter.py  forecast.py  history.py  live_stream.py  news_fetcher.py  notifier.py  overlay.py  overlay_macos.py  peak.py  pricing.py  subagents.py  themes.py  ticker.py  tray_indicator.py  trends.py  updater.py  webhooks.py  widget.py  widget_macos.py
claude_usage/providers/: __init__.py  base.py  claude.py  codex.py
claude_usage/skins/: __init__.py  _adapter.py  _paint.py  _popup.py  _popup_generic.py  brutalist.py  dashboard.py  hud.py  popup_data.py  receipt.py  strip.py  terminal.py
docs/: homebrew.md
docs/integrations/: README.md  claude-code-statusline.md  polybar-module.ini  starship.toml.snippet  tmux.conf.snippet  waybar-module.json  waybar-style.css  zsh-prompt.zsh
docs/plans/: 2026-04-21-next-level-features.md
docs/specs/: 2026-07-09-codex-multi-provider-usage-design.md
scripts/: diagnose_windows.py  gen_screenshots.py
skins-themes/handoff/: CLAUDE_CODE_PROMPT.md  README.md  __init__.py  _popup.py  popup_data.py
skins-themes/handoff/directions/: __init__.py  d1_terminal.py  d2_dashboard.py  d3_hud.py  d4_receipt.py  d5_strip.py  d6_brutalist.py
tests/: test_ai_report.py  test_analytics.py  test_api_server.py  test_budget.py  test_burn.py  test_cache_analyzer.py  test_cli.py  test_codex.py  test_codex_provider.py  test_collect_providers.py  test_collector.py  test_config.py  test_exporter.py  test_forecast.py  test_history.py  test_live_stream.py  test_multi_overlay_routing.py  test_notifier.py  test_peak.py  test_pricing.py  test_process_alive.py  test_skin_codex_rows.py  test_status_dot.py  test_statusline_source.py  test_subagents.py  test_themes.py  test_ticker.py  test_ticker_coloring.py  test_trends.py  test_updater.py  test_view_mode.py  test_webhooks.py  test_widget_helpers.py  test_window_label.py
